; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_ehci_pci.c_ehci_pci_ati_quirk.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_ehci_pci.c_ehci_pci_ati_quirk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PCI_EHCI_VENDORID_ATI = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"AMD SB600/700 quirk applied\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64)* @ehci_pci_ati_quirk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ehci_pci_ati_quirk(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %25

9:                                                ; preds = %2
  %10 = load i32, i32* @PCI_EHCI_VENDORID_ATI, align 4
  %11 = call i32* @pci_find_device(i32 %10, i32 17285)
  store i32* %11, i32** %5, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %9
  br label %39

15:                                               ; preds = %9
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @pci_get_revid(i32* %16)
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %6, align 4
  %19 = icmp ne i32 %18, 58
  br i1 %19, label %20, label %24

20:                                               ; preds = %15
  %21 = load i32, i32* %6, align 4
  %22 = icmp ne i32 %21, 59
  br i1 %22, label %23, label %24

23:                                               ; preds = %20
  br label %39

24:                                               ; preds = %20, %15
  br label %25

25:                                               ; preds = %24, %2
  %26 = load i32*, i32** %3, align 8
  %27 = call i32 @pci_read_config(i32* %26, i32 83, i32 1)
  store i32 %27, i32* %6, align 4
  %28 = load i32, i32* %6, align 4
  %29 = and i32 %28, 8
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %39, label %31

31:                                               ; preds = %25
  %32 = load i32, i32* %6, align 4
  %33 = or i32 %32, 8
  store i32 %33, i32* %6, align 4
  %34 = load i32*, i32** %3, align 8
  %35 = load i32, i32* %6, align 4
  %36 = call i32 @pci_write_config(i32* %34, i32 83, i32 %35, i32 1)
  %37 = load i32*, i32** %3, align 8
  %38 = call i32 @device_printf(i32* %37, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  br label %39

39:                                               ; preds = %14, %23, %31, %25
  ret void
}

declare dso_local i32* @pci_find_device(i32, i32) #1

declare dso_local i32 @pci_get_revid(i32*) #1

declare dso_local i32 @pci_read_config(i32*, i32, i32) #1

declare dso_local i32 @pci_write_config(i32*, i32, i32, i32) #1

declare dso_local i32 @device_printf(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
